- https://github.com/eclipse-sirius/sirius-components/issues/1929[#1929] [view] Fix an issue where direct edit on View based diagram elements could lead to infinite loop
- https://github.com/eclipse-sirius/sirius-components/issues/1891[#1891] [projects] The 'Show all templates' dialog was not functional from an empty state (with no existing project)

=== New Features

- https://github.com/eclipse-sirius/sirius-components/issues/1695[#1695] [view] Add a precondition expression to the node description
- https://github.com/eclipse-sirius/sirius-components/issues/1527[#1527] [diagram] Add the new layout data structure which will be used by the new version of our layout algorithm.
This new data structure will be used by the frontend if the name of a diagram ends with `__EXPERIMENTAL`.
This will allow us to easily compare the current layout algorithm and the new one.
- https://github.com/eclipse-sirius/sirius-components/issues/1846[#1846] [diagram] A debug mode has been added for diagrams.
This debug mode can be activated by setting the configuration property `sirius.components.diagram.debug` to `true`.
Once activated, this debug mode will display additional information on diagram elements to help debug what has been computed by the backend.
image:doc/images/Debug_info.png[]
- https://github.com/eclipse-sirius/sirius-components/issues/1902[#1902] [sirius-web] Add new data fetchers to sirius-web allowing to execute AQL requests

=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/593[#593] [domain] Add support for referencing and extending other custom domains
- https://github.com/eclipse-sirius/sirius-components/issues/1518[#1518] [project] Remove the "format all code" save action in order to let us write code without having to specify "@formatter:off" everywhere. It will also make it easier for us to use IDEs other than Eclipse to contribute to Sirius Web